--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -2,22 +2,15 @@
 layout: default
 ---
 
-<div class="posts">
-<h3>News</h3>
+<h2>News</h2>
 <ul>
-  {% for post in site.posts limit:3 %}
+  {% for post in site.posts offset:3 %}
   <li>
   <span class="datelabel">{{ post.date | date: "%B %d, %Y" }}:</span>
       <a href="{{ post.url }}">{{ post.title }}</a>.
       {{ post.content | strip_html | strip_newlines | truncate: 120 }}
     </li>
   {% endfor %}
-  </ul>
-  <p><a href="news">Older news</a>
-  </p>
+</ul>
 </div>
-
-
-
-{{ content }}
 
