--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,9 @@
         <div class="container">
           <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
-          <h3 class="masthead-title">
-            <a href="{{ site.baseurl }}" title="Home">{{ site.title }}</a>
+	  <h3 class="masthead-title">
+	  <a href="{{ "/" | prepend:site.baseurl }}" title="Home">{{ site.title }}</a>
+
             <small>{{ site.tagline }}</small>
           </h3>
         </div>
