--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,16 +10,18 @@ layout: default
 
 <div class="related">
   <h2>Related Posts</h2>
-  <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
-      <li>
-        <h3>
-          <a href="{{ post.url }}">
-            {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
-          </a>
-        </h3>
-      </li>
+
+  {% if page.tags.size > 0 %}
+    <p>See other posts tagged:</p>
+    <ul>
+    {% for tag in page.tags %}
+    <li>
+        <a href="{{"/tags/" | prepend:site.baseurl }}{{ tag }}/">{{ tag }}</a>
+    </li>
     {% endfor %}
-  </ul>
+    </ul>
+  {% endif %}
+
+  <p>See <a href="{{ "/alltags"| prepend:site.baseurl }}"</a>index of posts by tag</a></p>
+
 </div>
