--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: default
   {% for post in site.posts limit:3 %}
   <li>
   <span class="datelabel">{{ post.date | date: "%B %d, %Y" }}:</span>
-      <a href="{{ post.url }}">{{ post.title }}</a>.
+      <a href="{{ post.url }}">{{ post.title }}</a>
       {{ post.content | strip_html | strip_newlines | truncate: 120 }}
     </li>
   {% endfor %}
@@ -20,4 +20,3 @@ layout: default
 
 
 {{ content }}
-
