--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -4,10 +4,19 @@ layout: default
 
 <h1>Posts tagged "{{ page.tag }}"</h1>
 
-<ul>
+<div class="related">
+
+  <ul class="related-posts">
 {% for post in site.tags[page.tag] %}
-  <li>
-    {{ post.date | date: "%B %d, %Y" }}: <a href="{{ post.url }}">{{ post.title }}</a>
-  </li>
+  <li><a href="{{ post.url }}">
+    {{ post.title }}  </a>
+    <small>{{ post.date | date: "%B %d, %Y" }}</small>
+
+</li>
 {% endfor %}
 </ul>
+</div>
+
+
+
+  <p>See an <a href="{{ "/alltags"| prepend:site.baseurl }}"</a>index of posts by tag</a>.</p>
