--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h2>News</h2>
+<h2>News and opinions</h2>
 <ul>
   {% for post in site.posts offset:3 %}
   <li>
@@ -13,4 +13,3 @@ layout: default
   {% endfor %}
 </ul>
 </div>
-
