--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="posts">
-<h3>News</h3>
+<h3>News and opinions</h3>
 <ul>
   {% for post in site.posts limit:3 %}
   <li>
