--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,9 @@ layout: default
     <ul>
     {% for tag in page.tags %}
     <li>
-        <a href="{{"/tags/" | prepend:site.baseurl }}{{ tag }}/">{{ tag }}</a>
+        <a href="{{"/tags/" | prepend:site.baseurl }}{{ tag }}/">{{ site.data.blogtopics[tag].title }}</a>
+
+
     </li>
     {% endfor %}
     </ul>
